2004-10-21  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: fixed file removing with --delete-first option;
	  optimized done job deletion.

2004-10-20  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc: remove bogus assert.
	* MirrorJob.cc: fix permissions comarision; don't Roll parent mirror
	  if DONE (this fixes a mysterious corruption - looks like trouble
	  when MirrorJob's are deleted in wrong order).
	* SMTask.cc: add assert; check deleting before Roll loop.

2004-10-18  Alexander V. Lukyanov <lav@yars.free.net>

	* Fish.cc, Fish.h, SFtp.cc, SFtp.h: don't sent password several times,
	  as it most probably is incorrect.
	* CmdExec.h, parsecmd.cc: (quotable, is_space, is_quote) add utility
	  functions; use them.
	* complete.cc: (copy_word_skip, skip_word) new functions; use them for
	  argument counting; better mirror -R completion.

2004-10-17  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: fixed rare coredump when parent_mirror was referenced
	  from dtor, and it was already deleted.

2004-10-15  Alexander V. Lukyanov <lav@yars.free.net>

	* Fish.cc: prepend ./ to file names starting with - or ~
	* FileCopy.cc, FileCopy.h: fixed upload corruption bug.

2004-10-14  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: don't chmod if not needed.
	* NetAccess.cc, NetAccess.cc: (TrySuccess) new method; optimize
	  reconnect interval calculation, add reconnect_interval_curr member.
	* Http.cc, ftpclass.cc, SFtp.cc, Fish.cc: use TrySuccess.

2004-10-04  Alexander V. Lukyanov <lav@yars.free.net>

	* complete.cc: rough mirror -R handling.

2004-09-27  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: don't send empty Cache-Control.

2004-09-22  Alexander V. Lukyanov <lav@yars.free.net>

	* CatJob.cc: use ascii mode only for tty output by default.

2004-09-16  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc: fix endless loop in FileCopyPeerFDStream.
	* ftpclass.cc: don't apply ftp:port-ipv4 to FXP.
