@@ -139,7 +139,8 @@ public:
       ALLOW_CHOWN=1<<9,
       IGNORE_TIME=1<<10,
       REMOVE_FIRST=1<<11,
-      IGNORE_SIZE=1<<12
+      IGNORE_SIZE=1<<12,
+      NO_SYMLINKS=1<<13
    };
 
    void SetFlags(int f,int v)
